# t-SMILES

./: README.md  pyproject.toml  refactor_t_smiles.py
t_smiles/: __init__.py
t_smiles/dataset/: std_tokens.py  tokenlizer.py
t_smiles/dataset/graph/: cnj_mol_assembler - _copy.py  cnj_mol_assembler.py  cnj_mol_util.py  cnjt_mol.py  cnx_binary_tree.py
t_smiles/dataset/jtnn/: chem_utils.py  mol_tree.py
t_smiles/legacy/: utils.py
t_smiles/mol_utils/rdk_utils/: rdk_assembling.py  rdk_edit.py  rdk_enumerator.py
t_smiles/mol_utils/rdk_utils/frag/: rdk_frag_brics.py  rdk_frag_brics_dummy.py  rdk_frag_mmpa.py  rdk_frag_r_brics.py  rdk_frag_scaffold.py  rdk_frag_util.py
tests/: test.ipynb  test.py
