[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "t-smiles"
version = "0.4.0+refactor.wglee"
description = "Fragment-based multiscale molecular representation (refactored version)"
readme = "README.md"
authors = [
    { name = "juanniwu" },
    { name = "Wglee", email = "weongyulee@incerebro.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "rdkit",
    "networkx>=2.4",
    "numpy>=1.19",
    "pandas>=1.2.2",
    "matplotlib>=2.0",
    "scipy>=1.4.1",
    "datamol",
    "python-Levenshtein"
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
